--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
             font-family: Helvetica, Arial, FreeSans, ubuntu, sans-serif;
             color: #1A2E3B;
             line-height: 1;
-            margin: 0;
-            padding: 0;
         }
         a {
             color: #1A2E3B;
@@ -19,9 +17,6 @@
         .signature-container {
             max-width: 400px;
             margin: 0 auto;
-        }
-        table {
-            border-collapse: collapse;
         }
     </style>
 </head>
@@ -35,34 +30,35 @@
                 </td>
             </tr>
         </table>
-        <table width="400" cellspacing="0" cellpadding="0" border="0" style="margin-top: 10px;">  
+        <br>
+        <table width="400" cellspacing="1" cellpadding="0" border="0">  
             <tr>
                 <td align="center" style="vertical-align:middle;padding-right:5px;">
                     <a href="https://antinol.com.au"><img style="border:none;" width="150" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/logo_ba3da51f-ded7-4c4c-8b30-433f2ef19b73.png?v=1725943190" alt="Antinol Logo"></a>
                 </td>
                 <td>
-                    <img src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/khim.png?v=1725946585" style="width: 100%; display: block;" alt="Khim">
-                    <span style="font-size:14px; display: block; margin-top: 5px;">
-                        <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Email.png?v=1626437139" alt="email" style="border:none; vertical-align:middle;">
+                    <img src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/khim.png?v=1725946585" style="padding-bottom:0px;" alt="Khim"><br>
+                    <span style="font-size:14px;">
+                        <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Email.png?v=1626437139" alt="email" style="border:none; vertical-align:middle; padding-bottom:3px;">
                         <a href="mailto:andy@vetzpetz.com">andy@vetzpetz.com</a>
                     </span>
-                    <span style="font-size:14px; display: block; margin-top: 3px;">
-                        <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Phone.png?v=1626437139" alt="mobile" style="border:none;vertical-align:middle;">
+                    <br>
+                    <span style="font-size:14px;">
+                        <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Phone.png?v=1626437139" alt="mobile" style="border:none;vertical-align:middle; padding-bottom:3px;">
                         <a href="tel:+61433302275">+61 433 302 275</a>
                     </span>
-                    <div style="margin-top: 5px;">
-                        <a href="https://www.facebook.com/Antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Facebook.png?v=1626437139" alt="Facebook" style="border:none;padding-right:1px;vertical-align:middle;"></a>
-                        <a href="https://www.instagram.com/antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Insta.png?v=1626437139" alt="Instagram" style="border:none;padding-right:1px;vertical-align:middle;"></a>
-                        <a href="https://antinol.com.au" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Web.png?v=1626437140" alt="Vetz Petz Antinol" style="border:none;padding-right:1px;vertical-align:middle;"></a>
-                    </div>
+                    <br>
+                    <a href="https://www.facebook.com/Antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Facebook.png?v=1626437139" alt="Facebook" style="border:none;padding-right:1px;vertical-align:middle;padding-top:5px;"></a>
+                    <a href="https://www.instagram.com/antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Insta.png?v=1626437139" alt="Instagram" style="border:none;padding-right:1px;vertical-align:middle;padding-top:5px;"></a>
+                    <a href="https://antinol.com.au" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Web.png?v=1626437140" alt="Vetz Petz Antinol" style="border:none;padding-right:1px;vertical-align:middle;padding-top:5px;"></a>
                 </td>
             </tr>
         </table>
-        <table width="400" cellspacing="0" cellpadding="0" border="0" style="margin-top:0;">
+        <table width="351" cellspacing="0" cellpadding="0" border="0" style="margin-top:0px">
             <tr>
-                <td style="padding:0;">
-                    <a style="display:block;" href="https://antinol.com.au/pages/60-day-risk-free-trial">
-                        <img style="border:none; display:block; width:100%;" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/240910_EmailSig_764x158px_Export.gif?v=1725943180" alt="60-day risk-free trial">
+                <td style="padding:0px">
+                    <a style="display:inline-block" href="https://antinol.com.au/pages/60-day-risk-free-trial">
+                        <img style="border:none;" width="400" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/240910_EmailSig_764x158px_Export.gif?v=1725943180" alt="60-day risk-free trial">
                     </a>
                 </td>
             </tr>
