--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Helvetica, Arial, FreeSans, ubuntu, sans-serif;
             color: #1A2E3B;
-            line-height: 1;
+            line-height: 1.5;
         }
         a {
             color: #1A2E3B;
@@ -37,7 +37,7 @@
                     <a href="https://antinol.com.au"><img style="border:none;" width="150" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/logo_ba3da51f-ded7-4c4c-8b30-433f2ef19b73.png?v=1725943190" alt="Antinol Logo"></a>
                 </td>
                 <td>
-                    <img src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/khim.png?v=1725946585" style="padding-bottom:0px;" alt="Khim"><br>
+                    <img width="250" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/khim.png?v=1725946585" style="padding-bottom:5px;" alt="Khim"><br>
                     <span style="font-size:14px;">
                         <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Email.png?v=1626437139" alt="email" style="border:none; vertical-align:middle; padding-bottom:3px;">
                         <a href="mailto:andy@vetzpetz.com">andy@vetzpetz.com</a>
@@ -54,9 +54,9 @@
                 </td>
             </tr>
         </table>
-        <table width="351" cellspacing="0" cellpadding="0" border="0" style="margin-top:0px">
+        <table width="351" cellspacing="0" cellpadding="0" border="0" style="margin-top:3px">
             <tr>
-                <td style="padding:0px">
+                <td style="padding:3px 0">
                     <a style="display:inline-block" href="https://antinol.com.au/pages/60-day-risk-free-trial">
                         <img style="border:none;" width="400" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/240910_EmailSig_764x158px_Export.gif?v=1725943180" alt="60-day risk-free trial">
                     </a>
