--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andy Marsh - Email Signature</title>
+    <title>Email Signature</title>
     <style>
         body {
             font-family: Helvetica, Arial, FreeSans, ubuntu, sans-serif;
@@ -25,8 +25,8 @@
         <table width="351" cellspacing="0" cellpadding="0" border="0" style="padding-left: 10px;">
             <tr>
                 <td style="vertical-align: middle; text-align:left;">
-                    <span><b><span style="font-size:18px; padding-bottom:10px">Andy Marsh</span></b><br>
-                    <span style="font-size:14px;">Head of Operations - Australia</span></span>
+                    <span><b><span style="font-size:18px; padding-bottom:10px">First and Last Name</span></b><br>
+                    <span style="font-size:14px;">Position/Title - Country</span></span>
                 </td>
             </tr>
         </table>
@@ -40,12 +40,12 @@
                     <img width="250" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/khim.png?v=1725946585" style="padding-bottom:5px;" alt="Khim"><br>
                     <span style="font-size:14px;">
                         <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Email.png?v=1626437139" alt="email" style="border:none; vertical-align:middle; padding-bottom:3px;">
-                        <a href="mailto:andy@vetzpetz.com">andy@vetzpetz.com</a>
+                        <a href="mailto:youremail@vetzpetz.com">youremail@vetzpetz.com</a>
                     </span>
                     <br>
                     <span style="font-size:14px;">
                         <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Phone.png?v=1626437139" alt="mobile" style="border:none;vertical-align:middle; padding-bottom:3px;">
-                        <a href="tel:+61433302275">+61 433 302 275</a>
+                        <a href="tel:+61400123456">+61 400 123 456</a>
                     </span>
                     <br>
                     <a href="https://www.facebook.com/Antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Facebook.png?v=1626437139" alt="Facebook" style="border:none;padding-right:1px;vertical-align:middle;padding-top:5px;"></a>
