--- a/index.html
+++ b/index.html
@@ -22,47 +22,47 @@
 </head>
 <body>
     <div class="signature-container">
-        <table width="351" cellspacing="0" cellpadding="0" border="0" style="padding-left: 10px;">
-            <tr>
+        <table width="400" cellspacing="0" cellpadding="0" border="0" style="padding-left: 10px;">
+            <tbody><tr>
                 <td style="vertical-align: middle; text-align:left;">
                     <span><b><span style="font-size:18px; padding-bottom:10px">First and Last Name</span></b><br>
                     <span style="font-size:14px;">Position/Title - Country</span></span>
                 </td>
             </tr>
-        </table>
+        </tbody></table>
         <br>
         <table width="400" cellspacing="1" cellpadding="0" border="0">  
-            <tr>
-                <td align="center" style="vertical-align:middle;padding-right:5px;">
-                    <a href="https://antinol.com.au"><img style="border:none;" width="150" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/logo_ba3da51f-ded7-4c4c-8b30-433f2ef19b73.png?v=1725943190" alt="Antinol Logo"></a>
+            <tbody><tr>
+                <td align="center" style="vertical-align:top;padding-right:5px;">
+                    <a href="https://antinol.com.au"><img style="border:none;" width="170" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/logo_ba3da51f-ded7-4c4c-8b30-433f2ef19b73.png?v=1725943190" alt="Antinol Logo"></a>
                 </td>
-                <td>
-                    <img width="250" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/khim.png?v=1725946585" style="padding-bottom:5px;" alt="Khim"><br>
-                    <span style="font-size:14px;">
+                <td style="vertical-align:top;padding-top:0px;">
+                    <img width="230" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/khim.png?v=1725946585" alt="Khim"><br>
+                    <span style="font-size:14px;vertical-align:middle;">
                         <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Email.png?v=1626437139" alt="email" style="border:none; vertical-align:middle; padding-bottom:3px;">
                         <a href="mailto:youremail@vetzpetz.com">youremail@vetzpetz.com</a>
                     </span>
                     <br>
-                    <span style="font-size:14px;">
+                    <span style="font-size:14px;vertical-align:middle;">
                         <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Phone.png?v=1626437139" alt="mobile" style="border:none;vertical-align:middle; padding-bottom:3px;">
                         <a href="tel:+61400123456">+61 400 123 456</a>
                     </span>
                     <br>
-                    <a href="https://www.facebook.com/Antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Facebook.png?v=1626437139" alt="Facebook" style="border:none;padding-right:1px;vertical-align:middle;padding-top:5px;"></a>
-                    <a href="https://www.instagram.com/antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Insta.png?v=1626437139" alt="Instagram" style="border:none;padding-right:1px;vertical-align:middle;padding-top:5px;"></a>
-                    <a href="https://antinol.com.au" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Web.png?v=1626437140" alt="Vetz Petz Antinol" style="border:none;padding-right:1px;vertical-align:middle;padding-top:5px;"></a>
+                    <a href="https://www.facebook.com/Antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Facebook.png?v=1626437139" alt="Facebook" style="border:none;padding-right:1px;vertical-align:middle;"></a>
+                    <a href="https://www.instagram.com/antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Insta.png?v=1626437139" alt="Instagram" style="border:none;padding-right:1px;vertical-align:middle;"></a>
+                    <a href="https://antinol.com.au" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Web.png?v=1626437140" alt="Vetz Petz Antinol" style="border:none;padding-right:1px;vertical-align:middle;"></a>
                 </td>
             </tr>
-        </table>
-        <table width="351" cellspacing="0" cellpadding="0" border="0" style="margin-top:3px">
-            <tr>
+        </tbody></table>
+        <table width="400" cellspacing="1" cellpadding="0" border="0">
+            <tbody><tr>
                 <td style="padding:3px 0">
                     <a style="display:inline-block" href="https://antinol.com.au/pages/60-day-risk-free-trial">
                         <img style="border:none;" width="400" src="https://cdn.shopify.com/s/files/1/0758/9209/7323/files/240910_EmailSig_764x158px_Export.gif?v=1725943180" alt="60-day risk-free trial">
                     </a>
                 </td>
             </tr>
-        </table>
+        </tbody></table>
     </div>
 </body>
 </html>
