--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="signature-container">
-        <table width="400" cellspacing="0" cellpadding="0" border="0" style="padding-left: 10px;">
+        <table width="400" cellspacing="0" cellpadding="0" border="0" style="padding-bottom:10px;padding-left: 10px;">
             <tbody><tr>
                 <td style="vertical-align: middle; text-align:left;">
                     <span><b><span style="font-size:18px; padding-bottom:10px">First and Last Name</span></b><br>
@@ -30,7 +30,6 @@
                 </td>
             </tr>
         </tbody></table>
-        <br>
         <table width="400" cellspacing="1" cellpadding="0" border="0">  
             <tbody><tr>
                 <td align="center" style="vertical-align:top;padding-right:5px;">
@@ -42,7 +41,6 @@
                         <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Email.png?v=1626437139" alt="email" style="border:none; vertical-align:middle; padding-bottom:3px;">
                         <a href="mailto:youremail@vetzpetz.com">youremail@vetzpetz.com</a>
                     </span>
-                    <br>
                     <span style="font-size:14px;vertical-align:middle;">
                         <img width="15" height="15" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Phone.png?v=1626437139" alt="mobile" style="border:none;vertical-align:middle; padding-bottom:3px;">
                         <a href="tel:+61400123456">+61 400 123 456</a>
