--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         <a href="tel:+61400123456">+61 400 123 456</a>
                     </span>
                     <br>
-                    <a href="https://www.facebook.com/Antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Facebook.png?v=1626437139" alt="Facebook" style="border:none;padding-right:1px;vertical-align:middle;"></a>
-                    <a href="https://www.instagram.com/antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Insta.png?v=1626437139" alt="Instagram" style="border:none;padding-right:1px;vertical-align:middle;"></a>
-                    <a href="https://antinol.com.au" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Web.png?v=1626437140" alt="Vetz Petz Antinol" style="border:none;padding-right:1px;vertical-align:middle;"></a>
+                    <a href="https://www.facebook.com/Antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Facebook.png?v=1626437139" alt="Facebook" style="border:none;padding-right:1px;padding-top:1px;vertical-align:middle;"></a>
+                    <a href="https://www.instagram.com/antinol.au/" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Insta.png?v=1626437139" alt="Instagram" style="border:none;padding-right:1px;padding-top:1px;vertical-align:middle;"></a>
+                    <a href="https://antinol.com.au" style="display: inline-block;"><img width="20" height="20" src="https://cdn.shopify.com/s/files/1/0306/2389/1595/files/Web.png?v=1626437140" alt="Vetz Petz Antinol" style="border:none;padding-right:1px;padding-top:1px;vertical-align:middle;"></a>
                 </td>
             </tr>
         </tbody></table>
